# vecdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  normalizer_submission.md  schema_submission.md
.github/workflows/: release.yml
docs/: AGENT_MANUAL.md  BUILDING.md  CHUNKING_EXPLAINED.md  CLI.md  CONFIG.md  DATABASE_MANAGEMENT.md  EMBEDDING_MODELS.md  EXAMPLES.md  GIT.md  GPU.md  MCP_SERVER.md  SEARXNG.md  TECHNICAL_OVERVIEW.md  USAGE_NEXT_STEPS.md  VECDB-ASM.md  VECTOR_FACETS.md
docs/examples/: QUERYING.md  SHARING.md  THUNAR_INTEGRATION.md
docs/specs/: CHUNKING_STRATEGY.md  INGESTION_DESIGN.md  MCP_INTERFACE.md  ONNX.md  OPENAPI.md  PARSING_GUIDELINES.md  README.md  STRUCTURAL_IMPLEMENTATION.md
docs/vecq/: AGENT_MANUAL.md  (+6 more)
docsize/: Cargo.toml  DOCSIZE.md  README.md  install.sh
docsize/src/: args.rs  config.rs  context.rs  main.rs  ollama.rs
examples/: README.md  docker-compose.qdrant.yml  docker-compose.server.yml
schemas/: README.md  artifact.schema.json  chat.schema.json  diff.schema.json  graph.schema.json  log.schema.json  task.schema.json
tests/: docker-compose.qdrant.yml  mini_lua.py  run_all.sh  test_lines.toml  tier0_qdrant_isolation.py  tier1_asm_deduplication.py  tier1_asm_sequencing.py  tier1_asm_state_diff.py  tier1_config.py  tier1_embedder_config.py  tier1_git_history.py  tier1_git_metadata.py  tier1_incremental.py  tier1_mcp.py  tier1_parity.py  tier1_parsers.py  tier1_parsers.sh  tier1_qdrant.py  tier1_query.py  tier1_security.py  tier2_cli_compliance.py  tier2_compile.py  tier2_config_compliance.py  tier2_facets.py  tier2_parsers_all.py  tier2_path_parsing.py  tier3_audit_cargo.py  tier3_audit_files.py  tier3_mcp_e2e.py  tier3_mcp_history.py  tier3_mcp_resources.py  tier3_mcp_server.py  tier3_quantization.py  tier4_agent_workflow.py  tier4_mixed_formats.py  tier4_realistic_ingest.py  verify_installed_binary.py
vecdb-asm/: Cargo.toml  VECDB-ASM.md
vecdb-asm/src/: lib.rs  main.rs  types.rs
vecdb-asm/src/docs/: man_agent.md  man_human.md
vecdb-asm/src/strategy/: mod.rs  state.rs  stream.rs
vecdb-cli/: Cargo.toml  README.md
vecdb-cli/src/: cli.rs  main.rs  vecq_adapter.rs
vecdb-cli/src/commands/: config.rs  delete.rs  enable_usages.rs  history.rs  ingest.rs  list.rs  man.rs  mod.rs  optimize.rs  search.rs  snapshot.rs  status.rs
vecdb-cli/src/docs/: man_agent.md  man_human.md
vecdb-cli/tests/: cli_integration.rs  tier2_collection_cleanup.rs  tier2_glob_exclude.rs  tier2_glob_include.rs  tier2_ingest_variants.rs  tier2_smart_ingestion.rs
vecdb-cli/tests/cmd/: help.trycmd
vecdb-cli/tests/fixtures/: config.toml
vecdb-common/: Cargo.toml
vecdb-common/src/: detection.rs  input.rs  lib.rs  lines.rs  logging.rs  output.rs  text.rs
vecdb-core/: Cargo.toml
vecdb-core/src/: backend.rs  config.rs  embedder.rs  git.rs  history.rs  ingestion.rs  jobs.rs  lib.rs  router.rs  snapshot.rs  state.rs  tools.rs  types.rs
vecdb-core/src/backends/: mod.rs  qdrant.rs
vecdb-core/src/chunking/: mod.rs  simple.rs
vecdb-core/src/embedders/: local.rs  mock.rs  mod.rs  ollama.rs
vecdb-core/src/ingestion/: discovery.rs  mod.rs  options.rs  pipeline.rs  processor.rs  twopass.rs
vecdb-core/src/parsers/: json.rs  mod.rs  streaming_json.rs  yaml.rs
vecdb-core/tests/: fixture_json.rs  fixture_streaming_json.rs  fixture_yaml.rs  parser_compliance.rs  perf_chunking.rs  perf_ingestion.rs  regression_performance.rs  tier1_architecture.rs  tier1_backend_mock.rs  tier1_chunk_size_enforcement.rs  tier1_chunking.rs  tier1_core_ingestion.rs  tier1_embedding_mock.rs  tier1_file_skip_optimization.rs  tier1_idempotency.rs  tier1_json_comments.rs  tier1_json_parser_fix.rs  tier1_local_embedder.rs  tier1_matryoshka.rs  tier1_parser_fallback.rs  tier2_cuda.rs  tier2_large_files.rs  tier2_qdrant.rs  tier2_resource_stress.rs  tier2_stability.rs
vecdb-core/tests/fixtures/: ratatui_widgets.json
vecdb-server/: Cargo.toml
vecdb-server/src/: core_registry.rs  handler.rs  lib.rs  main.rs  server.rs  vecq_adapter.rs
vecdb-server/src/rpc/: dispatcher.rs  mod.rs  resources.rs  tools.rs  types.rs
vecdb-server/tests/: common.rs  tier2_mcp_integration.rs
vecq/: Cargo.toml  test_link.md
vecq/examples/functions/: doc.jq
vecq/src/: converter.rs  detection.rs  enrich.rs  error.rs  formatter.rs  generator.rs  lib.rs  main.rs  man_cmd.rs  natives.rs  parser.rs  query.rs  types.rs
vecq/src/cli/: args.rs  elements.rs  mod.rs  output.rs  run.rs
vecq/src/docs/: man_agent.md  man_human.md
vecq/src/formatter/: grep.rs  human.rs  json.rs  mod.rs
vecq/src/generators/: json.rs  mod.rs  rust.rs  toml.rs
vecq/src/parsers/: bash.rs  c.rs  cpp.rs  cuda.rs  go.rs  html.rs  javascript.rs  json.rs  markdown.rs  mod.rs  python.rs  rust.rs  rust_parser.rs  rust_tree_sitter.rs  text.rs  toml.rs
vecq/src/parsers/python/: mod.rs  usage.rs  visitor.rs
vecq/src/stdlib/: auto.jq  doc.jq
vecq/src/stdlib/normalizers/: artifact_cargo.jq  chat_openwebui.jq  diff_git.jq  graph_src.jq  graph_to_architecture.jq  log_journald.jq  log_nginx.jq  task_github.jq  task_src.jq  task_todo.jq
vecq/src/stdlib/renderers/: architecture.jq  artifact.jq  chat.jq  diff.jq  graph.jq  log.jq  task.jq
vecq/src/types/: attributes.rs  document.rs  element_type.rs  metadata.rs
vecq/tests/: integration_antigravity.rs  jq_audit.rs  jq_stdlib.rs  parser_compliance.rs  property_core_traits.proptest-regressions  property_core_traits.rs  property_file_detection.proptest-regressions  property_file_detection.rs  property_markdown.rs  property_rust_parsing.rs  schema_contract_test.rs  tier1_c23.rs  tier1_query.rs  tier1_slurp.rs  tier2_vecq.rs  tier3_roundtrip.rs  toml_support.rs
vecq/tests/fixtures/cuda/: ggml-cuda.cu
vecq/tests/fixtures/html/: doc.html
vecq/tests/fixtures/json/: chat_export.json
vecq/tests/fixtures/markdown/: all_elements.md
vecq/tests/fixtures/python/: complex.py
vecq/tests/fixtures/rust/: dummy.rs
vecq/tests/fixtures/text/: notes.txt
vecq/tests/fixtures/toml/: basic.toml
xtask/: Cargo.toml
(+23 files in other folders)
