[workspace]

[package]
name = "docsize"
version = "1.0.1"
edition = "2021"
authors = ["Sextant <daryl@daryltucker.com>"]
license = "MIT"
repository = "https://github.com/daryltucker/vecdb"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "6.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
toml = "1.0"
dialoguer = "0.12"
console = "0.16"
futures-util = "0.3"
ignore = "0.4"


# Path-based dependencies for workspace members
vecdb-common = { path = "../vecdb-common" }
vecq = { path = "../vecq", features = ["python-parser", "c-parser", "cpp-parser", "go-parser", "javascript-parser"] }
infer = "0.19.0"
