[package]
name = "vecdb-asm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Stateful Assembler for vecdb - merges and deduplicates temporal knowledge streams"

[dependencies]
vecdb-common = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
chrono.workspace = true
sha2 = "0.10.8"
futures = "0.3.31"
similar = "2.7.0"
regex = "1.12.2"
