[package]
name = "vecdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for vecdb: Ingestion and Management"

[[bin]]
name = "vecdb"
path = "src/main.rs"

[dependencies]
vecdb-core = { workspace = true, features = ["local-embed", "qdrant"] }
vecdb-common = { workspace = true }
vecq = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
termimad = "0.34.1" # For nice CLI markdown rendering
include_dir = "0.7.4" # To embed documentation files
colored = "3.0.0"
dialoguer = "0.12.0"
num_cpus = "1.17.0"
sha2 = "0.10"


[features]
default = ["cuda"]
cuda = ["vecdb-core/cuda"]

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
trycmd = "0.15"
