[package]
name = "vecdb-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared utilities for vecdb ecosystem: output handling, common patterns"

[dependencies]
# Minimal dependencies - this crate should be lightweight
serde = { workspace = true, features = ["derive"] }
[dev-dependencies]
