[package]
name = "vecdb-common"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository = "https://github.com/daryltucker/vecdb"
description = "Shared utilities for vecdb ecosystem: output handling, common patterns"

[dependencies]
# Minimal dependencies - this crate should be lightweight
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
