[package]
name = "vecdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for vecdb: Abstractions, Ingestion Pipeline, and Backend Traits"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tempfile = "3.24.0"

[dependencies]
vecdb-common = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
sha2 = "0.11.0-rc.3"
infer = { workspace = true }
walkdir = "2.5.0"
ignore = "0.4.25"
glob = "0.3.1"
dirs = "6.0.0"
toml = { workspace = true }
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
clap = { version = "4.5.54", features = ["derive"] }
schemars = "1.2.0"
futures = "0.3.31"

# Backends
qdrant-client = { workspace = true, optional = true }
serde_yaml = "0.9.34" # +deprecated removed
md-5 = "0.11.0-rc.3"
base64 = "0.22.1"
# fastembed requires ort = "=2.0.0-rc.10"
json5 = "1.3.0" # For JSON with Comments (tsconfig.json, etc.)


text-splitter = { version = "0.29.3", features = ["markdown", "tiktoken-rs"] }
tiktoken-rs = "0.9.1"

# Local Inference (Optional - enables Ollama-free operation)
# Requires hf-hub feature for automatic model downloading
fastembed = { version = "5.8.0", optional = true, default-features = false, features = ["hf-hub-native-tls"] }
ort = { version = "2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "cuda", "tls-native-vendored"] }
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.12.2"
indicatif = "0.18.3"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = ["qdrant", "local-embed", "cuda"]
qdrant = ["dep:qdrant-client"]
local-embed = ["dep:fastembed"]
cuda = ["local-embed", "dep:ort", "ort/cuda"]
