[package]
name = "vecdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP Server implementation for vecdb (server name: vecdb-mcp)"

[dependencies]
vecdb-core = { workspace = true, features = ["local-embed", "qdrant"] }
vecdb-common = { workspace = true }
vecq = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
dotenvy = { workspace = true }
schemars = "1.2.0"




[features]


[dev-dependencies]
async-trait = { workspace = true }
vecdb-core = { workspace = true } # Already in deps but harmless
tokio-test = "0.4.5"
