[package]
name = "vecdb-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository = "https://github.com/daryltucker/vecdb"
description = "MCP Server implementation for vecdb (server name: vecdb-mcp)"

[dependencies]
vecdb-core = { workspace = true, features = ["local-embed", "qdrant"] }
vecdb-common = { workspace = true }
vecq = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
dotenvy = { workspace = true }
schemars = "1.2.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1.8", features = ["full"] }
tower = "0.5"
rustls = { workspace = true }




[features]


[dev-dependencies]
async-trait = { workspace = true }
vecdb-core = { workspace = true } # Already in deps but harmless
tokio-test = "0.4.5"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/vecdb-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/vecdb-{ target }.zip"
pkg-fmt = "zip"
